assets/cache-aware/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.networking.k8s.io/v1","kind":"HTTPRoute","metadata":{"annotations":{},"name":"llama-3-2-1b-http-route","namespace":"llm-d"},"spec":{"hostnames":["llm-d-inference-gateway-llm-d.apps.rhoai-cluster.qhxt.p1.openshiftapps.com"],"parentRefs":[{"group":"gateway.networking.k8s.io","kind":"Gateway","name":"llm-d-gateway","namespace":"llm-d"}],"rules":[{"backendRefs":[{"group":"","kind":"Service","name":"llama-3-2-1b-epp-service","port":9002,"weight":1}],"matches":[{"path":{"t [...]
  creationTimestamp: "2025-07-31T00:53:35Z"
  generation: 12
  name: llama-3-2-1b-http-route
  namespace: llm-d
  ownerReferences:
  - apiVersion: llm-d.ai/v1alpha1
    kind: ModelService
    name: llama-3-2-1b
    uid: b976fe96-bcb2-4e18-b02d-8e8e573988f4
  resourceVersion: "9402269"
  uid: c1c161bd-f7f1-402b-8b89-bd53653c83a7
spec:
  hostnames:
  - llm-d-inference-gateway-llm-d.apps.rhoai-cluster.qhxt.p1.openshiftapps.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: llm-d-gateway
    namespace: llm-d
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: llama-3-2-1b-cache-aware-service
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /v1
status:
  parents:
  - conditions:
    - lastTransitionTime: "2025-07-31T00:53:35Z"
      message: Route was valid
      observedGeneration: 12
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-31T00:53:35Z"
      message: All references resolved
      observedGeneration: 12
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: istio.io/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: llm-d-gateway
      namespace: llm-d
